force-app/main/default/objects/EN_prospect__c/EN_prospect__c.object-meta.xml
<CustomObject>
    <label>エンジ_見込み</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>エンジ_見込み名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>