force-app/main/default/objects/EN_prospect__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>提案商品カテゴリ別_期待収益</relationshipLabel>
    <relationshipName>account_Proposal_rsw</relationshipName>
    <type>Lookup</type>
</CustomField>