force-app/main/default/objects/EN_prospect__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>作成時の野原HD所有者の部署情報を表示</description>
    <label>担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>