force-app/main/default/objects/EN_prospect__c/fields/EN_ARankNum__c.field-meta.xml
<CustomField>
    <fullName>EN_ARankNum__c</fullName>
    <label>今月Aランク数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>