force-app/main/default/objects/EN_prospect__c/fields/EN_ARankTargetProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>EN_ARankTargetProfitAmount__c</fullName>
    <label>今月Aランク目標利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>