force-app/main/default/objects/EN_prospect__c/fields/en_genbasyotyoumei__c.field-meta.xml
<CustomField>
    <fullName>en_genbasyotyoumei__c</fullName>
    <label>現場所長名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>