force-app/main/default/objects/EN_prospect__c/fields/En_kanseikiText__c.field-meta.xml
<CustomField>
    <fullName>En_kanseikiText__c</fullName>
    <label>完成期（テキスト）</label>
    <length>225</length>
    <type>Text</type>
</CustomField>