force-app/main/default/objects/EN_prospect__c/fields/EN_lastMonthkuzyoukyoukoment__c.field-meta.xml
<CustomField>
    <fullName>EN_lastMonthkuzyoukyoukoment__c</fullName>
    <label>先月の攻略方針</label>
    <type>TextArea</type>
</CustomField>