force-app/main/default/objects/EN_prospect__c/fields/EN_LastMonthzyutyuumikomi__c.field-meta.xml
<CustomField>
    <fullName>EN_LastMonthzyutyuumikomi__c</fullName>
    <label>先月見込み</label>
    <length>225</length>
    <type>Text</type>
</CustomField>