force-app/main/default/objects/EN_prospect__c/fields/EN_OrderNum__c.field-meta.xml
<CustomField>
    <fullName>EN_OrderNum__c</fullName>
    <label>今月受注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>