force-app/main/default/objects/EN_prospect__c/fields/EN_sincyokuzyoukyoukoment__c.field-meta.xml
<CustomField>
    <fullName>EN_sincyokuzyoukyoukoment__c</fullName>
    <label>今月の攻略方針</label>
    <type>TextArea</type>
</CustomField>