force-app/main/default/objects/EN_prospect__c/fields/EN_ThisMonthEstimated__c.field-meta.xml
<CustomField>
    <fullName>EN_ThisMonthEstimated__c</fullName>
    <label>今月受注見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>