force-app/main/default/objects/EN_prospect__c/fields/en_ukeoisyunkouyoteibi__c.field-meta.xml
<CustomField>
    <fullName>en_ukeoisyunkouyoteibi__c</fullName>
    <label>請負竣工予定日</label>
    <type>Date</type>
</CustomField>