force-app/main/default/objects/EN_prospect__c/fields/en_zyutyuukakudo__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuukakudo__c</fullName>
    <label>受注確度</label>
    <length>225</length>
    <type>Text</type>
</CustomField>