force-app/main/default/objects/EN_prospect__c/fields/EN_zyutyuumikomi__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuumikomi__c</fullName>
    <label>今月見込み</label>
    <length>225</length>
    <type>Text</type>
</CustomField>