force-app/main/default/objects/EN_prospect__c/fields/ST_Maker__c.field-meta.xml
<CustomField>
    <fullName>ST_Maker__c</fullName>
    <label>メーカー</label>
    <length>225</length>
    <type>Text</type>
</CustomField>